
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-lab-suite"
version = "0.1.0"
description = "Functional research suite: data analysis, molecular modeling, topological maps, and paper generation"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pharma-lab-app = "pharma_lab_suite.__main__:main"
